# cursed_desktop

./: .gitignore  AUTHORS  ChangeLog  Readme  Readme.rst  requirements.txt  setup.cfg  setup.py
CursedXDG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cursed_desktop/: __init__.py  tui.py
cursedxdg/: __init__.py  cursedxdg.py  tui.py
docs/: History.rst  Readme.rst  requirements.txt
