[metadata]
name = cursed_desktop
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Ncurses menu using the freedesktop desktop entry spec
description-file = docs/Readme.rst
home-page = http://github.com/XayOn/cursed_desktop
license = GPL3+
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Information Technology
        License :: OSI Approved :: GPL3
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    freedesktop
    desktop_environments

[files]
packages =
    cursed_desktop

[entry_points]
console_scripts =
    cursed_desktop = cursed_desktop:main
